--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Landing Page</title>
   </head>
-
   <body>
     <div class="head-container">
       <div class="header">
@@ -20,19 +19,29 @@
         <p>This Website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
         <button>Sign up</button>
       </div>
-      <img src="" alt=" this is placeholder for an image">
+      <div class="box"></div>
+        <img src="" alt=" this is placeholder for an image">
+      </div>
     </div>
     <div class="middle-top">
         <h2>Some Random Information</h2>
-        <div class="images-captions">
-            <img src="" alt=" image or an illustration">
-            <figcaption>this is some subtext under an illustration or image</figcaption>
-            <img src="" alt="image or an illustration">
-            <figcaption>this is some subtext under an illustration or image</figcaption>
-            <img src="" alt="image or an illustration">
-            <figcaption>this is some subtext under an illustration or image</figcaption>
-            <img src="" alt="image or an illustration">
-            <figcaption>this is some subtext under an illustration or image</figcaption>
+        <div class="images-box">
+            <div class="box">
+              <img src="" alt=" image or an illustration">
+              <figcaption>this is some subtext under an illustration or image</figcaption>
+            </div>
+            <div class="box">
+              <img src="" alt="image or an illustration">
+              <figcaption>this is some subtext under an illustration or image</figcaption>
+            </div>
+            <div class="box">
+              <img src="" alt="image or an illustration">
+              <figcaption>this is some subtext under an illustration or image</figcaption>
+            </div>
+            <div class="box">
+              <img src="" alt="image or an illustration">
+              <figcaption>this is some subtext under an illustration or image</figcaption>
+            </div>
         </div>
       </div>
     <div class="middle-bottom">
@@ -45,6 +54,8 @@
       </div>
       <button>Sign up</button>
     </div>
-    <footer>Copyright &copy The Odin Project 2021</footer>
+    <div class="footer">
+      <footer>Copyright &copy The Odin Project 2021</footer>
+    </div>
   </body>
 </html>
