--- a/index.html
+++ b/index.html
@@ -5,48 +5,49 @@
     <title>Landing Page</title>
   </head>
   <body>
-    <div class="head-container">
-      <div class="header">
-        <div>Header Logo</div>
-        <ul>
-          <li><a href="">header link one</a></li>
-          <li><a href="">header link two</a></li>
-          <li><a href="">header link three</a></li>
-        </ul>
-      </div>
+    <div class="header">
+      <div>Header Logo</div>
+      <ul>
+        <li><a href="">header link one</a></li>
+        <li><a href="">header link two</a></li>
+        <li><a href="">header link three</a></li>
+      </ul>
+    </div>
+    <div class="top-container">
       <div class="title">
-        <h1>This Website is Awesome</h1>
-        <p>This Website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
         <button>Sign up</button>
       </div>
-      <div class="box"></div>
-        <img src="" alt=" this is placeholder for an image">
-      </div>
+      <div class="image-box">
+        <figure>This a placeholder for an image</figure>
+      </div>  
     </div>
     <div class="middle-top">
         <h2>Some Random Information</h2>
         <div class="images-box">
             <div class="box">
-              <img src="" alt=" image or an illustration">
+             <figure></figure>
               <figcaption>this is some subtext under an illustration or image</figcaption>
             </div>
             <div class="box">
-              <img src="" alt="image or an illustration">
+              <figure></figure>
               <figcaption>this is some subtext under an illustration or image</figcaption>
             </div>
             <div class="box">
-              <img src="" alt="image or an illustration">
+              <figure></figure>
               <figcaption>this is some subtext under an illustration or image</figcaption>
             </div>
             <div class="box">
-              <img src="" alt="image or an illustration">
+              <figure></figure>
               <figcaption>this is some subtext under an illustration or image</figcaption>
             </div>
         </div>
       </div>
     <div class="middle-bottom">
-        <p>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <div>Thor, God of Thunder</div>
+        <div class="middle-box">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            <div>Thor, God of Thunder</div>
+        </div>
     </div>
     <div class="bottom-container">
       <div>Call to action! It's time!
