Html styled and linked to CSS document
Styles added to allow the html document
include, but not limited to flexbox, coloring,
font changes. All to style to look like
assignment PNGS

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="header">
@@ -24,7 +25,7 @@
       </div>  
     </div>
     <div class="middle-top">
-        <h2>Some Random Information</h2>
+        <h2>Some random information</h2>
         <div class="images-box">
             <div class="box">
              <figure></figure>
@@ -46,7 +47,7 @@
       </div>
     <div class="middle-bottom">
         <div class="middle-box">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
-            <div>Thor, God of Thunder</div>
+            <div>-Thor, God of Thunder</div>
         </div>
     </div>
     <div class="bottom-container">
